[project]
name = "ciut-inundaciones"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "geopandas>=1.1.0",
    "matplotlib>=3.10.3",
    "pystac-client>=0.8.6",
    "pytest>=8.4.1",
    "rioxarray>=0.19.0",
    "whitebox>=2.3.6",
]

[dependency-groups]
dev = [
    "pre-commit>=4.2.0",
]
